feat(twelve): add part one & two